--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,11 +2,9 @@ version: 2.1
 orbs:
   node: circleci/node@1.0.1
 jobs:
-  tslint:
-    name: "TSLinter"
+  lint:
     steps:
       - run: npm run lint:all
-  jest:
-    name: "Jest (Unit testing)"
+  test:
     steps:
       - run: npm run test:all
