--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "root",
   "private": true,
   "scripts": {
+    "link:all": "lerna link",
     "lint:all": "lerna exec --concurrency 1 -- npm run lint",
     "build:all": "lerna exec --concurrency 1 -- npm run build",
     "test:all": "lerna exec --concurrency 1 -- npm run test",
