--- a/packages/tween/package.json
+++ b/packages/tween/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.js",
   "source": "src/index.ts",
   "types": "dist/typings/index.d.ts",
+  "publishConfig": {
+    "access": "public"
+  },
   "files": [
     "dist/**"
   ],
