--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -85,6 +85,6 @@ workflows:
             - test
       - deploy:
           requires:
-            - hold
+            - approval
             - build
             - test
