--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "root",
   "private": true,
   "scripts": {
+    "lerna": "lerna",
     "link:all": "lerna link",
     "lint:all": "lerna exec --concurrency 1 -- npm run lint",
     "build:all": "lerna exec --concurrency 1 -- npm run build",
     "test:all": "lerna exec --concurrency 1 -- npm run test",
+    "publish:versions": "lerna version",
     "lint:package": "scripty",
     "build:package": "scripty",
     "test:package": "scripty",
