--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:all": "lerna exec --concurrency 1 -- npm run build",
     "test:all": "lerna exec --concurrency 1 -- npm run test",
     "publish:versions": "lerna version",
+    "publish:tag": "scripty",
     "lint:package": "scripty",
     "build:package": "scripty",
     "test:package": "scripty",
