--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,5 +14,6 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "lib": ["es2015", "es2016", "es2017", "dom"],
-  }
+  },
+  "exclude": [ "dist" ]
 }
