--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@dorfjungs/scss-base": "^1.1.0",
     "@types/jest": "^24.0.11",
     "babel-jest": "^24.7.1",
+    "coveralls": "^3.0.3",
     "jest": "^24.7.1",
     "lerna": "^3.13.3",
     "parcel-bundler": "^1.12.3",
