chore(build): added sperated modules to dist for publish + optimizations

--- a/packages/scroller/package.json
+++ b/packages/scroller/package.json
@@ -11,7 +11,8 @@
     "access": "public"
   },
   "files": [
-    "dist/**"
+    "dist/**",
+    "m/**"
   ],
   "scripts": {
     "lint": "NAME=$(basename \"$PWD\") && cd ../../ && npm run lint:package $NAME",
