--- a/packages/scroller-shared/package.json
+++ b/packages/scroller-shared/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@smoovy/scroller",
+  "name": "@smoovy/scroller-shared",
   "version": "0.0.0",
-  "description": "Smooth scrolling for the world",
+  "description": "Scroller shared components",
   "main": "dist/index.js",
   "source": "src/index.ts",
-  "types": "dist/typings/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "homepage": "https://github.com/davideperozzi/smoovy",
   "repository": "https://github.com/davideperozzi/smoovy",
   "publishConfig": {
@@ -22,18 +22,18 @@
   },
   "keywords": [
     "smoovy",
-    "tween",
     "scroller",
-    "smooth",
+    "shared",
     "scrolling",
-    "raf"
+    "transformers",
+    "outputs",
+    "inputs"
   ],
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
     "@smoovy/scroller-core": "^0.0.0",
-    "@smoovy/scroller-tween": "^0.0.0",
+    "@smoovy/utils": "^0.1.0",
     "tslib": "^1.9.3"
-  },
-  "gitHead": "8aec1c21483db613a51382dd502ddba2311d1b40"
+  }
 }
