--- a/package.json
+++ b/package.json
@@ -1,29 +1,42 @@
 {
   "name": "root",
   "private": true,
+  "scripty": {
+    "silent": true
+  },
   "scripts": {
     "lerna": "lerna",
     "link:all": "lerna link",
     "lint:all": "lerna exec --concurrency 1 -- npm run lint",
     "build:all": "lerna exec --concurrency 1 -- npm run build",
     "test:all": "lerna exec --concurrency 1 -- npm run test",
-    "publish:versions": "lerna version",
-    "publish:tag": "scripty",
+    "publish:all:versions": "lerna version",
+    "publish:tag:package": "scripty",
     "lint:package": "scripty",
     "build:package": "scripty",
     "test:package": "scripty",
+    "test:serve:package": "scripty",
     "serve:package": "scripty"
   },
   "devDependencies": {
     "@babel/core": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
     "@dorfjungs/scss-base": "^1.1.0",
-    "@types/jest": "^24.0.11",
+    "@types/expect-puppeteer": "^3.3.1",
+    "@types/jest": "^24.0.13",
+    "@types/jest-environment-puppeteer": "^4.0.0",
+    "@types/node": "^12.0.4",
+    "@types/puppeteer": "^1.12.4",
+    "@types/rimraf": "^2.0.2",
     "babel-jest": "^24.7.1",
     "coveralls": "^3.0.3",
-    "jest": "^24.7.1",
+    "cross-env": "^5.2.0",
+    "jest": "^24.8.0",
+    "jest-puppeteer": "^4.2.0",
     "lerna": "^3.13.3",
     "parcel-bundler": "^1.12.3",
+    "puppeteer": "^1.17.0",
+    "rimraf": "^2.6.3",
     "rollup": "^1.10.1",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-local-resolve": "^1.0.7",
@@ -31,6 +44,8 @@
     "rollup-plugin-typescript2": "^0.20.1",
     "sass": "^1.19.0",
     "scripty": "^1.9.1",
+    "ts-jest": "^24.0.2",
+    "ts-node": "^8.2.0",
     "tslib": "^1.9.3",
     "tslint": "^5.16.0",
     "typescript": "^3.4.4"
