--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,8 @@
     "allowSyntheticDefaultImports": true,
     "lib": ["es2015", "es2016", "es2017", "dom"],
     "typeRoots" : ["./node_modules/@types", "./typings"]
-  }
+  },
+  "files": [
+    "./packages"
+  ]
 }
