--- a/packages/scroller/package.json
+++ b/packages/scroller/package.json
@@ -31,8 +31,8 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/scroller-core": "^0.0.1",
-    "@smoovy/scroller-tween": "^0.0.1",
+    "@smoovy/scroller-core": "0.0.1",
+    "@smoovy/scroller-tween": "0.0.1",
     "tslib": "^1.9.3"
   },
   "gitHead": "8aec1c21483db613a51382dd502ddba2311d1b40"
