--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,12 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "lib": ["es2015", "es2016", "es2017", "dom"],
-    "typeRoots" : ["./node_modules/@types", "./typings"]
+    "typeRoots" : ["./node_modules/@types", "./typings"],
+    "baseUrl": "packages",
+    "paths": {
+      "@smoovy/*": ["*/src"],
+      "@smoovy/utils/m/*": ["utils/src/*"],
+      "@smoovy/tween/m/*": ["tween/src/*"],
+    }
   }
 }
