--- a/packages/scroller-tween/package.json
+++ b/packages/scroller-tween/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smoovy/scroller-tween",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Scroller tween module",
   "main": "dist/index.js",
   "source": "src/index.ts",
@@ -31,9 +31,9 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/scroller-core": "0.0.1",
-    "@smoovy/scroller-shared": "0.0.1",
-    "@smoovy/tween": "^0.1.1",
+    "@smoovy/scroller-core": "^0.0.2",
+    "@smoovy/scroller-shared": "^0.0.2",
+    "@smoovy/tween": "^0.1.2",
     "@smoovy/utils": "^0.1.1",
     "tslib": "^1.9.3"
   }
