--- a/packages/scroller/package.json
+++ b/packages/scroller/package.json
@@ -35,5 +35,9 @@
     "@smoovy/scroller-tween": "^0.0.3",
     "tslib": "^1.9.3"
   },
+  "devDependencies": {
+    "@smoovy/scroller-shared": "^0.0.3",
+    "@smoovy/utils": "^0.1.1"
+  },
   "gitHead": "8aec1c21483db613a51382dd502ddba2311d1b40"
 }
