--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,3 +89,5 @@ workflows:
           filters:
             tags:
               only: /^@smoovy\/.*/
+            branches:
+              ignore: /.*/
