--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "lerna": "lerna",
-    "link:all": "lerna link",
+    "bootstrap:all": "lerna bootstrap",
     "lint:all": "lerna exec --concurrency 1 -- npm run lint",
     "build:all": "lerna exec --concurrency 1 -- npm run build",
     "test:all": "lerna exec --concurrency 1 -- npm run test",
