chore(ci): updated ci steps

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -80,12 +80,14 @@ workflows:
       - build_test:
           filters:
             tags:
-              only: /@smoovy.*/
+              only: /^@smoovy.*/
+            branches:
+              ignore: /.*/
       - build_deploy:
           requires:
             - build_test
           filters:
             tags:
-              only: /@smoovy.*/
+              only: /^@smoovy.*/
             branches:
               ignore: /.*/
