--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@types/puppeteer": "^1.12.4",
     "@types/rimraf": "^2.0.2",
     "babel-jest": "^24.8.0",
-    "coveralls": "^3.0.4",
+    "codecov": "^3.5.0",
     "cross-env": "^5.2.0",
     "jest": "^24.8.0",
     "jest-puppeteer": "^4.2.0",
