--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "scripts": {
     "lerna": "lerna",
     "bootstrap:all": "lerna bootstrap",
-    "lint:all": "lerna exec --concurrency 1 -- npm run lint",
-    "build:all": "lerna exec --concurrency 1 -- npm run build",
-    "test:all": "lerna exec --concurrency 1 -- npm run test",
+    "lint:all": "lerna exec --concurrency 10 -- npm run lint",
+    "build:all": "lerna exec --concurrency 10 -- npm run build",
+    "test:all": "lerna exec --concurrency 10 -- npm run test",
+    "test:report": "codecov -y codecov.yml",
     "publish:all:versions": "lerna version",
     "publish:tag:package": "scripty",
     "lint:package": "scripty",
