--- a/packages/scroller-shared/package.json
+++ b/packages/scroller-shared/package.json
@@ -32,8 +32,8 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/scroller-core": "^0.0.9",
-    "@smoovy/utils": "^0.1.4",
+    "@smoovy/scroller-core": "0.*.*",
+    "@smoovy/utils": "0.*.*",
     "tslib": "^1.9.3"
   }
 }
