--- a/packages/scroller-tween/package.json
+++ b/packages/scroller-tween/package.json
@@ -31,10 +31,10 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/scroller-core": "^0.0.9",
-    "@smoovy/scroller-shared": "^0.0.10",
-    "@smoovy/tween": "^0.1.4",
-    "@smoovy/utils": "^0.1.4",
+    "@smoovy/scroller-core": "0.*.*",
+    "@smoovy/scroller-shared": "0.*.*",
+    "@smoovy/tween": "0.*.*",
+    "@smoovy/utils": "0.*.*",
     "tslib": "^1.9.3"
   }
 }
