--- a/packages/scroller/package.json
+++ b/packages/scroller/package.json
@@ -31,13 +31,13 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/scroller-core": "^0.0.9",
-    "@smoovy/scroller-tween": "^0.0.10",
+    "@smoovy/scroller-core": "0.*.*",
+    "@smoovy/scroller-tween": "0.*.*",
     "tslib": "^1.9.3"
   },
   "devDependencies": {
-    "@smoovy/scroller-shared": "^0.0.10",
-    "@smoovy/utils": "^0.1.4"
+    "@smoovy/scroller-shared": "0.*.*",
+    "@smoovy/utils": "0.*.*"
   },
   "gitHead": "8aec1c21483db613a51382dd502ddba2311d1b40"
 }
