--- a/packages/tween/package.json
+++ b/packages/tween/package.json
@@ -28,7 +28,7 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/ticker": "^0.1.2",
+    "@smoovy/ticker": "0.*.*",
     "tslib": "^1.9.3"
   },
   "gitHead": "8aec1c21483db613a51382dd502ddba2311d1b40"
