--- a/packages/scroller-core/package.json
+++ b/packages/scroller-core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@smoovy/scroller-core",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "Scroller core",
   "main": "dist/index.js",
   "source": "src/index.ts",
@@ -30,8 +30,8 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/observer": "0.*.*",
-    "@smoovy/utils": "0.*.*",
+    "@smoovy/observer": "^0.0.9",
+    "@smoovy/utils": "^0.1.5",
     "tslib": "^1.9.3"
   }
 }
