--- a/lerna.json
+++ b/lerna.json
@@ -1,5 +1,10 @@
 {
   "version": "independent",
+  "command": {
+    "publish": {
+      "message": "chore(release): publish"
+    }
+  },
   "packages": [
     "packages/*"
   ]
