--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -89,4 +89,4 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^@smoovy\/.*/
+              only: /.*/
