--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
       "@smoovy/*": ["*/src"],
       "@smoovy/utils/m/*": ["utils/src/*"],
       "@smoovy/tween/m/*": ["tween/src/*"],
-      "@smoovy/scroller-shared/m/*": ["scroller-shared/src/*"],
+      "@smoovy/scroller-shared/m/*": ["scroller-shared/src/*"]
     }
   }
 }
