--- a/packages/scroller-shared/package.json
+++ b/packages/scroller-shared/package.json
@@ -2,17 +2,18 @@
   "name": "@smoovy/scroller-shared",
   "version": "0.0.16",
   "description": "Scroller shared components",
-  "main": "dist/index.js",
+  "main": "dist/bundles/index.js",
+  "module": "dist/bundles/index.esm.js",
+  "unpkg": "dist/bundles/index.umd.js",
   "source": "src/index.ts",
-  "types": "dist/types/index.d.ts",
+  "types": "dist/typings/index.d.ts",
   "homepage": "https://github.com/davideperozzi/smoovy",
   "repository": "https://github.com/davideperozzi/smoovy",
   "publishConfig": {
     "access": "public"
   },
   "files": [
-    "dist/**",
-    "m/**"
+    "dist/**"
   ],
   "scripts": {
     "lint": "NAME=$(basename \"$PWD\") && cd ../../ && npm run lint:package $NAME",
