--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -2,7 +2,9 @@
   "name": "@smoovy/utils",
   "version": "0.1.7",
   "description": "Some basic functionality to make better websites",
-  "main": "dist/index.js",
+  "main": "dist/bundles/index.js",
+  "module": "dist/bundles/index.esm.js",
+  "unpkg": "dist/bundles/index.umd.js",
   "source": "src/index.ts",
   "types": "dist/typings/index.d.ts",
   "homepage": "https://github.com/davideperozzi/smoovy",
@@ -11,8 +13,7 @@
     "access": "public"
   },
   "files": [
-    "dist/**",
-    "m/**"
+    "dist/**"
   ],
   "scripts": {
     "lint": "NAME=$(basename \"$PWD\") && cd ../../ && npm run lint:package $NAME",
