--- a/packages/event/package.json
+++ b/packages/event/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@smoovy/scroller-tween",
-  "version": "0.0.17",
-  "description": "Scroller tween module",
+  "name": "@smoovy/event",
+  "version": "0.0.0",
+  "description": "Event emitter and helpers",
   "main": "dist/bundles/index.js",
   "module": "dist/bundles/index.esm.js",
   "unpkg": "dist/bundles/index.umd.js",
@@ -23,19 +23,15 @@
   },
   "keywords": [
     "smoovy",
-    "scroller",
-    "tween",
-    "scrolling",
-    "raf",
-    "performance"
+    "event",
+    "emitter",
+    "event-emitter",
+    "element",
+    "listener"
   ],
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
-    "@smoovy/scroller-core": "^0.0.16",
-    "@smoovy/scroller-shared": "^0.0.17",
-    "@smoovy/tween": "^0.2.2",
-    "@smoovy/utils": "^0.1.8",
     "tslib": "^1.9.3"
   }
 }
