--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "bootstrap": "lerna bootstrap",
     "publish:all": "lerna version",
     "lint:all": "lerna run --parallel --stream lint",
-    "test:all": "lerna run --parallel --stream test",
+    "test:all": "lerna run --stream test",
     "build:all": "lerna run --stream build",
     "test:report": "codecov -y codecov.yml",
     "lint:package": "scripty",
@@ -26,6 +26,7 @@
     "@types/express": "^4.17.2",
     "@types/jest": "^24.0.19",
     "@types/jest-environment-puppeteer": "^4.3.1",
+    "@types/jsdom": "^12.2.4",
     "@types/node": "^12.11.7",
     "@types/parcel-bundler": "^1.12.1",
     "@types/puppeteer": "^1.20.2",
@@ -36,6 +37,7 @@
     "express": "^4.17.1",
     "jest": "^24.9.0",
     "jest-puppeteer": "^4.3.0",
+    "jsdom": "^15.2.1",
     "lerna": "^3.18.3",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
