chore(readme): updated readme badge link

--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -7,7 +7,7 @@ on:
     tags:
       - '!refs/tags/*'
 jobs:
-  build_deploy:
+  build_test:
     runs-on: ubuntu-latest
     steps:
       - name: Setup environment
