fix(workflow): lerna deploy command

--- a/.github/workflows/build_test_deploy.yml
+++ b/.github/workflows/build_test_deploy.yml
@@ -37,7 +37,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-        run: npm run lerna publish from-git
+        run: npm run lerna publish from-git -- --yes
 
 
 
