fix(workflow): added error ignore for lerna publish from-git

--- a/.github/workflows/build_test_deploy.yml
+++ b/.github/workflows/build_test_deploy.yml
@@ -39,7 +39,7 @@ jobs:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: |
           echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > .npmrc
-          npm run lerna publish from-git -- --yes
+          npm run lerna publish from-git -- --yes || true
 
 
 
