--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@smoovy/router",
   "version": "0.0.5",
-  "description": "Event emitter and helpers",
+  "description": "Simple router",
   "main": "dist/bundles/index.js",
   "module": "dist/bundles/index.esm.js",
   "unpkg": "dist/bundles/index.umd.js",
