--- a/packages/observer/package.json
+++ b/packages/observer/package.json
@@ -32,6 +32,7 @@
   "author": "Davide Perozzi",
   "license": "MIT",
   "dependencies": {
+    "@smoovy/event": "^0.2.0",
     "@smoovy/utils": "^0.1.13",
     "tslib": "^1.9.3"
   }
