--- a/package.json
+++ b/package.json
@@ -19,41 +19,42 @@
     "serve:package": "scripty"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.4",
-    "@babel/preset-env": "^7.6.3",
-    "@dorfjungs/scss-base": "^1.2.0",
-    "@types/expect-puppeteer": "^3.3.2",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^24.0.19",
+    "@babel/core": "^7.10.2",
+    "@babel/preset-env": "^7.10.2",
+    "@dorfjungs/scss-base": "^1.3.0",
+    "@types/expect-puppeteer": "^3.3.3",
+    "@types/express": "^4.17.6",
+    "@types/express-serve-static-core": "^4.17.7",
+    "@types/jest": "^24.9.1",
     "@types/jest-environment-puppeteer": "^4.3.1",
     "@types/jsdom": "^12.2.4",
-    "@types/node": "^12.11.7",
+    "@types/node": "^12.12.43",
     "@types/parcel-bundler": "^1.12.1",
-    "@types/puppeteer": "^1.20.2",
-    "@types/rimraf": "^2.0.3",
+    "@types/puppeteer": "^1.20.6",
+    "@types/rimraf": "^2.0.4",
     "babel-jest": "^24.9.0",
-    "codecov": "^3.6.1",
+    "codecov": "^3.7.0",
     "cross-env": "^5.2.1",
     "express": "^4.17.1",
     "jest": "^24.9.0",
-    "jest-puppeteer": "^4.3.0",
+    "jest-puppeteer": "^4.4.0",
     "jsdom": "^15.2.1",
-    "lerna": "^3.18.3",
+    "lerna": "^3.22.0",
     "parcel": "^1.12.4",
     "parcel-bundler": "^1.12.4",
-    "puppeteer": "^1.20.0",
+    "puppeteer": "^3.3.0",
     "rimraf": "^2.7.1",
-    "rollup": "^1.25.2",
+    "rollup": "^1.32.1",
     "rollup-plugin-auto-external": "^2.0.0",
     "rollup-plugin-local-resolve": "^1.0.7",
     "rollup-plugin-terser": "^4.0.4",
     "rollup-plugin-typescript2": "^0.20.1",
-    "sass": "^1.23.1",
+    "sass": "^1.26.7",
     "scripty": "^1.9.1",
-    "ts-jest": "^24.1.0",
-    "ts-node": "^8.4.1",
-    "tslib": "^1.10.0",
-    "tslint": "^5.20.0",
-    "typescript": "^3.6.4"
+    "ts-jest": "^24.3.0",
+    "ts-node": "^8.10.2",
+    "tslib": "^1.13.0",
+    "tslint": "^5.20.1",
+    "typescript": "^3.9.3"
   }
 }
