feat(ci): removed github actions

--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "lerna": "lerna",
     "bootstrap": "lerna bootstrap",
     "publish": "lerna version",
-    "lint:all": "lerna run --parallel --stream lint",
-    "test:all": "lerna run --stream test",
-    "build:all": "lerna run --stream build",
-    "test:report": "codecov -y codecov.yml",
+    "lint": "lerna run --parallel --stream lint",
+    "test": "lerna run --stream test",
+    "build": "lerna run --stream build",
+    "report": "codecov -y codecov.yml",
     "lint:package": "scripty",
     "build:package": "scripty",
     "test:package": "scripty",
