fix(ci): drone config

--- a/.drone.yml
+++ b/.drone.yml
@@ -6,6 +6,7 @@ steps:
   - name: build and test
     image: node:13.12-alpine
     commands:
+      - apk add python
       - npm install
       - npm run bootstrap
       - npm run lint
@@ -20,7 +21,7 @@ steps:
       CODECOV_TOKEN:
         from_secret: codecov_token
     commands:
-      - apk add git
+      - apk add git python
       - git fetch --tags --force
       - npm install
       - npm run bootstrap
